# twilio_outbound_call_task

./: README.md  main.py  pyproject.toml  twilio_config.json
config/: config_handler.py  global_config.py  twilio_config_handler.py
routes/: config_twilio.py  twilo_talk.py
services/: call_logic.py  openai_client.py  twilio_client.py
templates/: make_call.html  make_interactive_call.html  twilio_config.html
vectordb_files/: pre_pocess.py  utils.py
